This file documents the revision history for the Monitoring Webinterface Thruk.

1.84-2   Sat May 17 16:49:45 CEST 2014
          - Panorama View:
            - icons snap to raster on drag/drop when shift key is hold
          - Bug Fixes
            - fixed removing old sessions with cookie auth
            - fixed panorama filter containing pipes
            - fixed panorama not showing usercontent
            - fixed panorama servicegroup popup details
            - fixed cookie auth problem when accessing site without trailing slash

1.84     Sat May 10 20:58:24 CEST 2014
          - support time definitions like 1st monday, last friday for recurring downtimes and reports
          - support host/hostgroup/servicegroup lists for recurring downtimes
          - added quick filter to config pages
          - general design fixes (awiddersheim)
          - Exfoliation theme fixes (awiddersheim)
          - fixed number format in performance data (awiddersheim)
          - config tool improvements for shinken (Mathieu Parent)
          - added new command "thruk -a selfcheck" to perform some self checks
          - optionally disable session revalidation in cookie auth
          - added csrf protection
          - added sorting of comments/downtimes on host/service pages
          - added more css classes to status page, hard, sort, attempt, duration...
          - Business Process
            - added support for custom functions
          - Reports
            - add button to directly send report by email
            - add maximum sla threshold to hide detail pages
            - allow multiple pnp graphs in sla reports (lkco)
          - Panorama View:
            - cookie state_provider has been removed
            - background can be change in dashboard settings
            - panels are not pinnable anymore
            - tabs are now independant and can be exported and imported seperatly
            - added icon widgets