@@ -1,5 +1,9 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
+next:
+          - Bug Fixes
+            - fixed calculation of computed configuration in config tool
+
 1.84-2   Sat May 17 16:49:45 CEST 2014
           - Panorama View:
             - icons snap to raster on drag/drop when shift key is hold
